# estrutura_de_dados

./: .gitignore  CMakeLists.txt  README.md
Atividades_avaliativas/Exercicio1/: Lista.c  Lista.h  main.c
Fila/Exercicio1/: Fila.c  Fila.h  main.c
Lista/Exercicio1/: Lista.c  Lista.h  main.c
Lista/Exercicio2/: Lista.c  Lista.h  Veiculo.c  Veiculo.h  main.c
Lista_encadeada/Exercicio1/: Lista.c  Lista.h  main.c
Lista_encadeada/Exercicio2/: Lista.c  Lista.h  main.c
Pilha/Exercicio1/: main.c  pilha.c  pilha.h  pilha_de_chaves.txt
Pilha/Exercicio2/: Aluno.c  Aluno.h  Pilha.c  Pilha.h  main.c
Simulados/Simulado1/: Lista.c  Lista.h  main.c
TAD/: README.md
